// Copyright Â© 2020 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package getamis.alice.crypto.tss.ecdsa.gg18.reshare;

option go_package = "github.com/getamis/alice/crypto/tss/ecdsa/gg18/reshare";

import "github.com/getamis/alice/crypto/commitment/message.proto";
import "github.com/getamis/alice/crypto/zkproof/message.proto";

enum Type {
    Commit = 0;
    Verify = 1;
    Result = 2;
}

message Message {
    Type type = 1;
    string id = 2;
    oneof body {
        BodyCommit commit = 3;
        BodyVerify verify = 4;
        BodyResult result = 5;
    }
}

message BodyCommit {
    commitment.PointCommitmentMessage pointCommitment = 1;
}

message BodyVerify {
    commitment.FeldmanVerifyMessage verify = 1;
}

message BodyResult {
    zkproof.SchnorrProofMessage siGProofMsg = 1;
}
